# books-api

./: .gitignore  Cargo.toml  Makefile  Readme.md  package-lock.json
books-api-hapijs-releases-v1.0.0/: .eslintrc.js  package.json
books-api-hapijs-releases-v1.0.0/src/: routes.js
books-api-hapijs-releases-v1.0.0/src/controller/: deleteBook.js  getBook.js  saveBook.js
books-api-hapijs-releases-v1.0.0/src/data/: books.js
infra/docker/: compose.yml
src/: config.rs  main.rs  response.js  server.js
src/controller/: updateBook.js
src/entity/: book.rs
src/handlers/: get_book.rs  mod.rs
src/repository/: book.rs
