[package]
name = "books-api-hapijs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.0-alpha.3", features = ["postgres", "runtime-tokio-native-tls"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
uuid = { version = "1", features = ["serde", "v4"] }
async-trait = "0.1.52"